// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/pypi getPkgReleases processes real data 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2017-04-03T16:55:14",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2017-04-17T20:32:30",
      "version": "0.0.2",
    },
    Object {
      "releaseTimestamp": "2017-04-28T21:18:54",
      "version": "0.0.3",
    },
    Object {
      "releaseTimestamp": "2017-05-09T21:36:51",
      "version": "0.0.4",
    },
    Object {
      "releaseTimestamp": "2017-05-30T23:13:49",
      "version": "0.0.5",
    },
    Object {
      "releaseTimestamp": "2017-06-13T22:21:05",
      "version": "0.0.6",
    },
    Object {
      "releaseTimestamp": "2017-06-21T22:12:36",
      "version": "0.0.7",
    },
    Object {
      "releaseTimestamp": "2017-07-07T16:22:26",
      "version": "0.0.8",
    },
    Object {
      "releaseTimestamp": "2017-08-28T20:14:33",
      "version": "0.0.9",
    },
    Object {
      "releaseTimestamp": "2017-09-22T23:47:59",
      "version": "0.0.10",
    },
    Object {
      "releaseTimestamp": "2017-10-24T02:14:07",
      "version": "0.0.11",
    },
    Object {
      "releaseTimestamp": "2017-11-14T18:31:57",
      "version": "0.0.12",
    },
    Object {
      "releaseTimestamp": "2017-12-05T18:57:54",
      "version": "0.0.13",
    },
    Object {
      "releaseTimestamp": "2018-01-05T21:26:03",
      "version": "0.0.14",
    },
    Object {
      "releaseTimestamp": "2018-01-17T18:36:39",
      "version": "0.1.0",
    },
    Object {
      "releaseTimestamp": "2018-01-31T18:05:22",
      "version": "0.1.1",
    },
    Object {
      "releaseTimestamp": "2018-02-13T18:17:52",
      "version": "0.1.2",
    },
    Object {
      "releaseTimestamp": "2018-03-13T17:08:20",
      "version": "0.1.3",
    },
    Object {
      "releaseTimestamp": "2018-03-27T17:55:25",
      "version": "0.1.4",
    },
    Object {
      "releaseTimestamp": "2018-04-10T17:25:47",
      "version": "0.1.5",
    },
    Object {
      "releaseTimestamp": "2018-05-07T17:59:09",
      "version": "0.1.6",
    },
    Object {
      "releaseTimestamp": "2018-05-22T17:25:23",
      "version": "0.1.7",
    },
  ],
  "sourceUrl": "https://github.com/Azure/azure-cli",
}
`;

exports[`datasource/pypi getPkgReleases respects compatibility 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": undefined,
      "version": "0.4.0",
    },
    Object {
      "releaseTimestamp": undefined,
      "version": "0.30.3",
    },
    Object {
      "releaseTimestamp": undefined,
      "version": "0.31.0",
    },
  ],
}
`;

exports[`datasource/pypi getPkgReleases returns non-github home_page 1`] = `
Object {
  "homepage": "https://microsoft.com",
  "releases": Array [],
}
`;

exports[`datasource/pypi getPkgReleases supports custom datasource url 1`] = `
Array [
  Array [
    Url {
      "auth": null,
      "hash": null,
      "host": "custom.pypi.net",
      "hostname": "custom.pypi.net",
      "href": "https://custom.pypi.net/azure-cli-monitor/json",
      "path": "/azure-cli-monitor/json",
      "pathname": "/azure-cli-monitor/json",
      "port": null,
      "protocol": "https:",
      "query": null,
      "search": null,
      "slashes": true,
    },
    Object {
      "json": true,
    },
  ],
]
`;

exports[`datasource/pypi getPkgReleases supports custom datasource url from environmental variable 1`] = `
Array [
  Array [
    Url {
      "auth": null,
      "hash": null,
      "host": "my.pypi.python",
      "hostname": "my.pypi.python",
      "href": "https://my.pypi.python/pypi/azure-cli-monitor/json",
      "path": "/pypi/azure-cli-monitor/json",
      "pathname": "/pypi/azure-cli-monitor/json",
      "port": null,
      "protocol": "https:",
      "query": null,
      "search": null,
      "slashes": true,
    },
    Object {
      "json": true,
    },
  ],
]
`;

exports[`datasource/pypi getPkgReleases supports multiple custom datasource urls 1`] = `
Array [
  Array [
    Url {
      "auth": null,
      "hash": null,
      "host": "custom.pypi.net",
      "hostname": "custom.pypi.net",
      "href": "https://custom.pypi.net/azure-cli-monitor/json",
      "path": "/azure-cli-monitor/json",
      "pathname": "/azure-cli-monitor/json",
      "port": null,
      "protocol": "https:",
      "query": null,
      "search": null,
      "slashes": true,
    },
    Object {
      "json": true,
    },
  ],
  Array [
    Url {
      "auth": null,
      "hash": null,
      "host": "second-index",
      "hostname": "second-index",
      "href": "https://second-index/azure-cli-monitor/json",
      "path": "/azure-cli-monitor/json",
      "pathname": "/azure-cli-monitor/json",
      "port": null,
      "protocol": "https:",
      "query": null,
      "search": null,
      "slashes": true,
    },
    Object {
      "json": true,
    },
  ],
]
`;
